sass initial learning and simple design

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sass Learning</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
+    <!-- sass link -->
     <link rel="stylesheet" href="sass/main.css">
 </head>
 <body>
+    <!-- footer area -->
     <footer class="footer__box">
         <div class="footer__item footer__item--one">
             <h1 class="box__title"><i class="fas fa-search"></i> Search</h1>
